new changes added

--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div id="board">
-        <h1>Tic Tac Toe</h1>
-        <div class="row">
-            <div class="top left"></div>
-            <div class="middle top"></div>
-            <div class="top right"></div>
-        </div>
-        <div class="row">
-            <div class="middle left"></div>
-            <div class="center"></div>
-            <div class="middle right"></div>
-        </div>
-        <div class="row">
-            <div class="bottom left"></div>
-            <div class="middle bottom"></div>
-            <div class="bottom right"></div>
-        </div>
-    </div>
+   <div class="tictactoe">
+       <div class="player">
+           Player 1
+
+           <div class="player-points" id="player1">0
+
+           </div>
+       </div>
+
+       <table id="game" class="board">
+       </table>
+
+       <div class="player">
+           Player 2
+        <div class="player-points" id="player2" >0</div>
+       </div>
+       <div class="clear"></div>
+   </div>
+   
+    <script src="app.js"></script>
 </body>
 </html>
